--- a/requirements.yml
+++ b/requirements.yml
@@ -10,6 +10,9 @@ functional:
   - Пользователь должен иметь возможность выбрать время игры
   - Пользователь должен иметь возможность выбора задачи
   - Пользователь должен иметь возможность выбора соперников
+  - Пользователь должен иметь возможность просматривать информацию о своём профиле (рейтинг, статистика игр и т.д)
+  - Пользователь должен иметь возможность просматривать общий рейтинг всех игроков
+  - Пользователь должен иметь возможность просматривать историю игр, игры в записи
   
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
@@ -18,9 +21,7 @@ non-functional:
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров
   - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
 implicit:
-  - Пользователь должен иметь возможность просмотра игр других участников
-  - Пользователь должен иметь возможность общаться в чате
-  - Пользователь должен иметь возможность просмотра истории своих игр и других участников
-  - Пользователь должен иметь возможность отмены созданной игры
-  - Пользователь должен видеть свой рейтинг и рейтинг других игроков
-  - Пользователь дожен видеть игроков online
+- У пользователя должен быть личный кабинет, в котором отображается статистика, рейтинг
+- Пользователь должен иметь возможность отменять созданную игру
+- Пользователь должен иметь возможность вернуться в игру после вылета
+- Пользователь должен иметь возможность менять настройки игры (звук, никнейм)
