--- a/test-cases.yml
+++ b/test-cases.yml
@@ -121,6 +121,48 @@
     Пользователь должен попасть на главную страницу
 
 - summary: |
+    проверка невозможности регистрации с уже зарегестрированным email
+  requirement: |
+    Нельзя регистрироваться с уже ранее зарегистрированным email
+  prerequisites: |
+    Пользователь уже зарегистрирован с email = kelevro342@mail.ru
+    Открыта страница регистрации
+  test-data: |
+    логин = kelevro342
+    email = kelevro342@mail.ru
+    пароль = interarma342!
+    password confirmation = interarma342!
+  steps: 
+    - Вводим логин
+    - Вводим email
+    - Вводим пароль
+    - Вводим подтверждения пароля
+    - Нажать Submit
+  expected-result: |
+    Должно прийти сообщение "email is already taken"
+
+- summary: |
+    проверка невозможности регистрации с уже зарегестрированным nickname
+  requirement: |
+    Нельзя регистрироваться с уже ранее зарегистрированным nikname
+  prerequisites: |
+    Пользователь уже зарегистрирован с nickname = kelevro342
+    Открыта страница регистрации
+  test-data: |
+    логин = kelevro342
+    email = kelevro342@mail.ru
+    пароль = interarma342!
+    password confirmation = interarma342!
+  steps: 
+    - Вводим логин
+    - Вводим email
+    - Вводим пароль
+    - Вводим подтверждения пароля
+    - Нажать Submit
+  expected-result: |
+    Должно прийти сообщение "nickname is already taken"
+
+- summary: |
     Проверка входа пользователя с несуществующими email и паролем
     requirement: |
     При неправильном email или пароле пользователь должен увидеть сообщение "email not found"
@@ -240,6 +282,19 @@
     - Нажимаем кнопку "Submit"
   expected-result: |
     Должно появиться уведомление "Must consist of Latin letters, numbers and underscores. Only begin with latin letter"
+
+- summary: |
+    Проверка невозможности регистрации при не заполненных полях в форме регистрации
+  requirement: |
+    При не заполненных полях регистрация невозможна
+  prerequisites: |
+    Открыта страница регистрации
+  test-data: |
+    none
+  steps: 
+    - Нажать Submit
+  expected-result: |
+    Появляются уведомления о необходимости заполнения полей
 
 - summary: |
     Запуск игры незарегистрированным пользователем 
@@ -362,7 +417,7 @@
   expected-result: |
     Должна быть создана новая игра с выбранной задачей
 
-    - summary: |
+- summary: |
     Выбор задачи по тегу
   requirement: 
     Пользователь должен иметь возможность выбрать задачу по тегу
@@ -376,6 +431,253 @@
     - Нажать кнопку «Create battle»
   expected-result: |
     Должна быть создана новая игра с выбранной задачей
+
+- summary: |
+    Проверка успешного подключения другого пользователя к созданной игре
+  requirement: |
+    Пользователь должен успешно подключаться к созданной игре, отображённой в лобби
+  prerequisites: |
+    Пользователь1 авторизован под логином = kelevro342@mail.ru, пароль = interarma342!, |
+    открыта главная страница, игра создана и отображается в лобби
+  test-data: |
+    none
+  steps: 
+    - Открыть другой браузер
+    - Перейти по https://codebattle.hexlet.io/
+    - Авторизовать пользователя2 под логином = kelevro0342@mail.ru, паролем = interarma342!
+    - Найти в лобби игру, созданную игроком kelevro342
+    - Нажать Fight
+  expected-result: |
+    Загружена страница для написания кода у обоих пользователей, игра запущена
+
+- summary: |
+    Проверка успешного создания игры с максимально заданным временем
+  requirement: |
+    Игра должна успешно создаваться с заданным промежутком времени
+  prerequisites: |
+    Пользователь авторизован, открыта главная страница
+  test-data: |
+    time control = 60 min
+  steps: 
+    - Нажать на кнопку создания игры
+    - Выбрать уровень игры elementary
+    - Выбрать тип соперника с ботом
+    - Выбрать заданный контроль времени
+    - Выбрать тип задачи = math
+    - Выбрать задачу = rect_area
+    - Нажать на кнопку создания
+  expected-result: |
+    Игра создана, открыта страница игры, таймер ведёт обратный отсчёт от 60 минут
+
+- summary: |
+    Проверка успешного создания игры с минимально заданным временем
+  requirement: |
+    Игра должна успешно создаваться с заданным промежутком времени
+  prerequisites: |
+    Пользователь авторизован, открыта главная страница
+  test-data: |
+    time control = 3 min
+  steps: 
+    - Нажать на кнопку создания игры
+    - Выбрать уровень игры elementary
+    - Выбрать тип соперника с ботом
+    - Выбрать заданный контроль времени
+    - Выбрать тип задачи = math
+    - Выбрать задачу = rect_area
+    - Нажать на кнопку создания
+  expected-result: |
+    Игра создана, открыта страница игры, таймер ведёт обратный отсчёт от 3 минут
+
+- summary: |
+    Проверка возможности выбора языка программирования
+  requirement: |
+    Пользователь должен иметь возможность выбирать язык программирования
+  prerequisites: |
+    Пользователь авторизован, игра создана, открыт экран для написания кода
+  test-data: |
+    none
+  steps: 
+    - Нажать на кнопку выбора языка программирования и выбрыть С#
+  expected-result: |
+    Язык изменён, в поле для написания кода отображается синтаксис языка C#
+
+- summary: |
+    Проверка невозможности просмотра профиля, без авторизации
+  requirement: |
+    Нельзя просматривать профиль, без авторизации на сайте
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/
+  test-data: |
+    URL пользователя = https://codebattle.hexlet.io/users/19240
+  steps: 
+    - Вводим в адресной строке браузера https://codebattle.hexlet.io/users/19240
+  expected-result: |
+    Страница профиля не открытается, появляется уведомление "You must be logged in to access that page"
+
+- summary: |
+    Проверка успешного завершения игры при правильном решении
+  requirement: |
+    При записи правильного решения, игра завершена, игрок побеждает
+  prerequisites: |
+    Игра создана выбрана задача rect_area, открыт экран для написания кода
+  test-data: |
+    Запись = return width * length;
+  steps: 
+    - Выбрать язык программирования Node.js
+    - В поле для ввода кода, сделать в 5 строке заданную запись
+    - Нажать на кнопку проверки решения
+  expected-result: |
+    Игра завершена, появляется уведомление о победе
+
+- summary: |
+    Проверка ошибки завершения игры при неправильном решении
+  requirement: |
+    При неправильном решении задачи, пользователь должен получить уведомление
+  prerequisites: |
+    Игра создана, выбрана задача rect_area, открыт экран для написания кода
+  test-data: |
+    Запись = return wi;
+  steps: 
+    - Выбрать язык программирования Node.js
+    - В поле для ввода кода, сделать в 5 строке заданную запись
+    - Нажать на кнопку проверки решения
+  expected-result: |
+    Пользователь видит уведомление об ошибке - тесты не прошли
+
+- summary: |
+    Проверка на возможность просмотра профиля пользователя
+  requirement: |
+    Пользователь должен иметь возможность просматривать информацию о своём профиле
+  prerequisites: |
+    Открыта главная страница, пользователь авторизован
+  test-data: |
+    none
+  steps: 
+    - Нажать на иконку c вашим nickname в правом верхем углу экрана
+    - Нажать на кнопку my profile
+  expected-result: |
+    Открывается страница, где пользователь видит информацию о своём профиле, статистику игр, рейтинг.
+
+- summary: |
+    Проверка на адаптивность под мобильные устройства
+  requirement: |
+    Сайт должен быть адаптирован под мобильные устройства
+  prerequisites: |
+    В браузере Chrome, открыта главная страница
+  test-data: |
+    Кнопка отображения на устройствах = Toggle device toolbar
+    Разрешение экрана = 320x480 px
+  steps: 
+    - Открыть DevTools
+    - Нажать Toggle device toolbar
+    - Нажать на responsive
+    - Вводим заданное разрешение экрана
+  expected-result: |
+    Все элементы на странице отображаются корректно
+
+- summary: |
+    Проверка входа с Firefox browser
+  requirement: |
+    Сайт должен корректно открываться и функционировать с разных браузеров
+  prerequisites: |
+    Открыт Firefox browser
+  test-data: |
+    Browser = Firefox browser 140.0.2 (64-разрядный)
+  steps:
+    - Открыть https://codebattle.hexlet.io/#lobby
+  expected-result: |
+    Корректно отображается сайт с Firefox browser
+
+- summary: |
+    Проверка входа с Opera One
+  requirement: |
+    Сайт должен корректно открываться и функционировать с разных браузеров
+  prerequisites: |
+    Открыт браузер Opera One
+  test-data: |
+    Browser = Opera One 120.0.5543.93
+  steps:
+    - Открыть https://codebattle.hexlet.io/#lobby
+  expected-result: |
+    Корректно отображается сайт с Opera One
+
+- summary: |
+    Проверка на отсутсвие ошибок при загрузке страницы 
+  requirement: |
+    Загрузка страницы должна быть завершена без ошибок
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+    Пользователь авторизован
+  test-data: |
+    none
+  steps: 
+    - Войти в DevTools
+    - Перейти на вкладку Network
+    - В фильтре выбрать All
+    - Нажать на кнопку обновления страницы
+  expected-result: |
+    Все файлы загружены, ошибок нет
+
+- summary: |
+    Проверка на возможность просмотра рейтинга всех игроков
+  requirement: |
+    Пользователь должен иметь возможность просматривать рейтинг всех игроков
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    none
+  steps: 
+    - Нажать на кнопку Top list
+  expected-result: |
+    Открывается страница для просмотра рейтинга всех игроков
+
+- summary: |
+    Проверка просмотра истории всех игр
+  requirement: |
+    Пользователь должен иметь возможность просматривать историю всех игр
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    none
+  steps: 
+    - Нажать на кнопку History
+  expected-result: |
+    Открывается страница с историей всех игр
+
+- summary: |
+    Проверка просмотра игр в записи
+  requirement: |
+    Пользователь должен иметь возможность просматривать запись игр
+  prerequisites: |
+    Открыта страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    none
+  steps: 
+    - Нажать на кнопку History
+    - Нажать show на любой игре
+    - Нажать кнопку воспроизведения
+  expected-result: |
+    Открывается страница с возможностью просмотра записи игр
+
+- summary: |
+    Проверка на оптимизацию скорости работы на персональном компьютере
+  requirement: |
+    Сайт должен быть оптимизирован на высокую скорость работы
+  prerequisites: |
+    Открыта главная страница
+  test-data: |
+    none
+  steps: 
+    - открыть страницу https://pagespeed.web.dev/
+    - На открывшейся странице, в поле Укажите URL, вставить https://codebattle.hexlet.io/#lobby
+    - Нажать Анализировать
+    - Перейти на вкладку Компьютер
+  expected-result: |
+    Производительность равна 99 единицам
+
+    
+
+
 
 
     
