--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,6 +1,6 @@
 ---
 - summary: |
-    Регистрация нового пользователя
+    Проверка успешной регистрации нового пользователя
   requirement: |
     При верном вводе данных на странице регистрации пользователь должен получить сообщение об успешной регистрации
   prerequisites: |
@@ -22,7 +22,7 @@
 
     ---
 - summary: |
-    Регистрация нового пользователя с занятым nickname
+    Проверка невозможности регистрации нового пользователя с занятым nickname
   requirement: |
     При вводе занятого nickname должно прийти уведомление "nickname is already taken"
   prerequisites: |
@@ -40,10 +40,10 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-     Должно появиться уведомление "nickname is already taken"
+     Должно появиться уведомление "nickname is already taken". Регистрация не пройдена
 
 - summary: |
-    Регистрация нового пользователя с занятым email
+    Проверка невозможности регистрации нового пользователя с занятым email
   requirement: |
     При вводе занятого email должно прийти уведомление "email is already taken"
   prerequisites: |
@@ -61,10 +61,10 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "email is already taken"
+    Должно появиться уведомление "email is already taken". Регистрация не пройдена
 
 - summary: |
-    Регистрация нового пользователя с несуществуюшим email
+    Проверка невозможности регистрации нового пользователя с несуществуюшим email
   requirement: |
     При вводе несуществующего email должно прийти уведомление "invalid email"
   prerequisites: |
@@ -82,7 +82,7 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "invalid email"
+    Должно появиться уведомление "invalid email". Регистрация не пройдена
 
 - summary: |
     Проверка невозможности ввода пробелов в начале email при регистрации
@@ -102,10 +102,10 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "invalid email"
+    Должно появиться уведомление "invalid email" Регистрацич не пройдена
 
 - summary: |
-    Проверка входа пользователя с существующими email и паролем
+    Проверка успешного входа пользователя с существующими email и паролем
   requirement: |
     При правильном email или пароле пользователь должен войти в аккаунт
   prerequisites:
@@ -121,7 +121,7 @@
     Пользователь должен попасть на главную страницу
 
 - summary: |
-    проверка невозможности регистрации с уже зарегестрированным email
+    Проверка невозможности регистрации с уже зарегестрированным email
   requirement: |
     Нельзя регистрироваться с уже ранее зарегистрированным email
   prerequisites: |
@@ -139,7 +139,7 @@
     - Вводим подтверждения пароля
     - Нажать Submit
   expected-result: |
-    Должно прийти сообщение "email is already taken"
+    Должно прийти сообщение "email is already taken". Регистрация не пройдена
 
 - summary: |
     проверка невозможности регистрации с уже зарегестрированным nickname
@@ -160,7 +160,7 @@
     - Вводим подтверждения пароля
     - Нажать Submit
   expected-result: |
-    Должно прийти сообщение "nickname is already taken"
+    Должно прийти сообщение "nickname is already taken". Регистрация не пройдена
 
 - summary: |
     Проверка входа пользователя с несуществующими email и паролем
@@ -176,7 +176,7 @@
     - Ввести Password
     - Нажать кнопку «Submit»
   expected-result: |
-    Пользователь должен увидеть сообщение "email not found"
+    Пользователь должен увидеть сообщение "email not found". Регистрация не пройдена
 
 - summary: |
     Проверка восстановления пароля
@@ -241,7 +241,7 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "Can't start or end with empty symbols"
+    Должно появиться уведомление "Can't start or end with empty symbols". Регистрация не пройдена
 
 - summary: |
     Проверка невозможности ввода цифр в начале nickname при регистрации
@@ -261,7 +261,7 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "Must consist of Latin letters, numbers and underscores. Only begin with latin letter"
+    Должно появиться уведомление "Must consist of Latin letters, numbers and underscores. Only begin with latin letter". Регистрация не пройдена
 
 - summary: |
     Проверка невозможности ввода букв кириллицы nickname при регистрации
@@ -281,7 +281,7 @@
     - Вводим "password confirmation"
     - Нажимаем кнопку "Submit"
   expected-result: |
-    Должно появиться уведомление "Must consist of Latin letters, numbers and underscores. Only begin with latin letter"
+    Должно появиться уведомление "Must consist of Latin letters, numbers and underscores. Only begin with latin letter". Регистрация не пройдена
 
 - summary: |
     Проверка невозможности регистрации при не заполненных полях в форме регистрации
@@ -297,7 +297,7 @@
     Появляются уведомления о необходимости заполнения полей
 
 - summary: |
-    Запуск игры незарегистрированным пользователем 
+    Проверка запуска игры незарегистрированным пользователем 
   requirement: |
     Пользователь должен иметь возможность запустить игру без авторизации на сайте
   prerequisites: |
@@ -310,7 +310,7 @@
     Должна открыться новая игра с ботом
 
 - summary: |
-    Создание новой игры с другим пользователем
+    Проверка создания новой игры с другим пользователем
   requirement: |
     Пользователь должен иметь возможность создать новую игру с другим пользователем
   prerequisites:
@@ -324,7 +324,7 @@
     Должна быть создана новая игра
 
 - summary: |
-    Приглашение друга в новую игру
+    Проверка приглашения друга в новую игру
   requirement: |
     Пользователь должен пригласить друга в новую игру
   prerequisites:
@@ -340,7 +340,7 @@
 
     
 - summary: |
-    Создание новой игры с ботом авторизованным пользователем
+    Проверка создания новой игры с ботом, авторизованным пользователем
   requirement: |
     Пользователь должен иметь возможность создать новую игру c  ботом
   prerequisites:
@@ -355,7 +355,7 @@
     Должна быть создана новая игра c ботом
 
 - summary: |
-    Завершение созданной игры
+    Проверка завершения созданной игры
   requirement: |
     Пользователь должен иметь возможность завершить созданную игру
   prerequisites:
@@ -373,7 +373,7 @@
     Игра должна завершиться
 
 - summary: |
-    Выбор сложности игры при создании игры
+    Проверка выбора сложности игры при создании игры
   requirement: 
     Пользователь должен иметь возможность выбрать сложность игры
   prerequisites:
@@ -385,10 +385,10 @@
     - Нажать кнопку уровня игры
     - Нажать кнопку «Create battle»
   expected-result: |
-    Должна быть создана новая игра с выбранным уровнем
+    Должна быть создана новая игра с выбранным уровнем сложности
 
 - summary: |
-    Выбор продолжительности игры
+    Проварка выбора продолжительности игры
   requirement: 
     Пользователь должен иметь возможность выбрать продолжительность игры
   prerequisites:
@@ -400,10 +400,10 @@
     - Выбрать продолжительность игры
     - Нажать кнопку «Create battle»
   expected-result: |
-    Должна быть создана новая игра с выбранной продолжительностью
+    Должна быть создана новая игра с выбранной продолжительностью игры
 
 - summary: |
-    Выбор задачи по названию
+    Проверка выбора задачи по названию
   requirement: 
     Пользователь должен иметь возможность выбрать задачу по названию
   prerequisites:
@@ -415,10 +415,10 @@
     - Выбрать с помощью меню решаемую задачу
     - Нажать кнопку «Create battle»
   expected-result: |
-    Должна быть создана новая игра с выбранной задачей
+    Должна быть создана новая игра с выбранной по названию задачей
 
 - summary: |
-    Выбор задачи по тегу
+    Проверка выбор задачи по тегу
   requirement: 
     Пользователь должен иметь возможность выбрать задачу по тегу
   prerequisites:
@@ -430,7 +430,7 @@
     - Выбрать с помощью тега задачу
     - Нажать кнопку «Create battle»
   expected-result: |
-    Должна быть создана новая игра с выбранной задачей
+    Должна быть создана новая игра с выбранной по тегу задачей
 
 - summary: |
     Проверка успешного подключения другого пользователя к созданной игре
