--- a/testing-report.yml
+++ b/testing-report.yml
@@ -45,7 +45,7 @@
 
   - summary: |
     Проверка невозможности ввода пробелов в начале nickname при регистрации
-  status: fail
+  status: pass
 
   - summary: |
     Проверка невозможности ввода цифр в начале nickname при регистрации
