--- a/test-cases.yml
+++ b/test-cases.yml
@@ -335,9 +335,9 @@
     Должна быть создана новая игра c ботом
 
 - summary: |
-    Проверка завершения созданной игры
-  requirement: |
-    Пользователь должен иметь возможность завершить созданную игру
+    Проверка возможности сдачи в игре
+    requirement: |
+    Пользователь должен иметь возможность сдаться в игре
   prerequisites:
     Пользователь авторизован
   test-data: |
@@ -350,7 +350,7 @@
     - Нажать кнопку "Give up"
     - В появившемся окне нажать "Give up"
   expected-result: |
-    Игра должна завершиться
+    Пользователь сдаётся, игра завершается
 
 - summary: |
     Проверка выбора сложности игры при создании игры
