--- a/testing-report.yml
+++ b/testing-report.yml
@@ -72,7 +72,7 @@
   status: pass
 
   - summary: |
-    Проверка завершения созданной игры
+    Проверка возможности сдачи в игре
   status: pass
 
   - summary: |
