--- a/issues.yml
+++ b/issues.yml
@@ -1,6 +1,6 @@
 ---
 issues:
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1923"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1893"
-  - url: "https://github.com/hexlet-codebattle/codebattle/issues/1958"
+  - url: https://github.com/hexlet-codebattle/codebattle/issues/1923
+  - url: https://github.com/hexlet-codebattle/codebattle/issues/1893
+  - url: https://github.com/hexlet-codebattle/codebattle/issues/1958
 
