--- a/requirements.yml
+++ b/requirements.yml
@@ -10,17 +10,23 @@ functional:
   - Пользователь должен иметь возможность выбрать время игры
   - Пользователь должен иметь возможность выбора задачи
   - Пользователь должен иметь возможность выбора соперников
-  - Пользователь должен иметь возможность просматривать информацию о своём профиле (рейтинг, статистика игр и т.д)
-  - Пользователь должен иметь возможность просматривать общий рейтинг всех игроков
-  - Пользователь должен иметь возможность просматривать историю игр, игры в записи
-  
+  - Пользователь должен иметь возможность просматривать информацию о своём
+    профиле (рейтинг, статистика игр и т.д)
+  - Пользователь должен иметь возможность просматривать общий рейтинг всех
+    игроков
+  - Пользователь должен иметь возможность просматривать историю игр, игры в
+    записи
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован
+    для скорости работы
   - Сайт должен быть безопасным и защищать данные пользователя
   - Сайт должен быть удобным на мобильном устройстве
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров
-  - Сайт должен быть способен обрабатывать большое количество трафика (например, 1000 одновременных пользователей)
+  - Сайт должен быть протестирован на совместимость с последними версиями
+    браузеров
+  - Сайт должен быть способен обрабатывать большое количество трафика (например,
+    1000 одновременных пользователей)
 implicit:
- - У пользователя должен быть личный кабинет, в котором отображается статистика, рейтинг
- - Пользователь должен иметь возможность вернуться в игру после вылета
- - Пользователь должен иметь возможность менять настройки игры (звук, никнейм)
+  - У пользователя должен быть личный кабинет, в котором отображается
+    статистика, рейтинг
+  - Пользователь должен иметь возможность вернуться в игру после вылета
+  - Пользователь должен иметь возможность менять настройки игры (звук, никнейм)
