--- a/requirements.yml
+++ b/requirements.yml
@@ -4,14 +4,28 @@ functional:
   - Пользователь должен иметь возможность авторизоваться на сайте
   - Пользователь должен иметь возможность создать игру
   - Пользователь должен иметь возможность присоединиться к игре
+  - Пользователи должны видеть два редактора (слева - свой редактор, справа -
+    соперника)
   - Пользователь должен иметь возможность выбрать язык программирования
   - Пользователь должен видеть в реальном времени код соперника
   - Пользователь должен иметь возможность выбрать сложность игры
   - Пользователь должен иметь возможность выбрать время игры
   - Пользователь должен иметь возможность выбора задачи
   - Пользователь должен иметь возможность выбора соперников
+  - Каждый пользователь должен иметь кнопку check для проверки своего решения, с
+    неограниченным проверок попыток
+  - Если пользователь вылетел из игры, второй может продолжать играть
+  - При вылете из игры в любой момент, пока она не закончена, пользователь может
+    переподключиться в игру
   - Пользователь должен иметь возможность просматривать информацию о своём
     профиле (рейтинг, статистика игр и т.д)
+  - Когда один из игроков находит верное решение, обоим игрокам высвечивается
+    модальное окно, где написано, кто является победителем этой игры
+  - Победитель-игрок может выйти из игры по нажатию кнопки exit, которая у него
+    появилась
+  - Пользователь при проигрыше может тоже выйти, или доиграть до конца
+  - Когда оба игрока вышли, игра считается полностью законченной и удаляется из
+    памяти
   - Пользователь должен иметь возможность просматривать общий рейтинг всех
     игроков
   - Пользователь должен иметь возможность просматривать историю игр, игры в
@@ -28,5 +42,4 @@ non-functional:
 implicit:
   - У пользователя должен быть личный кабинет, в котором отображается
     статистика, рейтинг
-  - Пользователь должен иметь возможность вернуться в игру после вылета
   - Пользователь должен иметь возможность менять настройки игры (звук, никнейм)
